# jackknife

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  README.rst  pyproject.toml  ruff.toml
.github/workflows/: ci.yml
docs/: api_reference.rst  creating-tools.md  design_philosophy.rst  implementation_details.rst  index.rst  llms.txt  plan.md
jackknife/: cli.py  tool_helpers.py
scripts/: format.sh  lint.sh  run_coverage.sh  run_tests.bat  run_tests.sh
tests/: conftest.py  test_cli.py  test_integration.py  test_tool_helpers.py
tests/fixtures/tools/: dummy.py  dummy.requirements.txt
tools/: cinit.py  example_decorated.py  example_decorated.requirements.txt  example_traditional.py  example_traditional.requirements.txt  giftomp4.py  giftomp4.requirements.txt  mcpm.py  piazzad.py  piazzad.requirements.txt
