[project]
name = "jackknife"
version = "0.1.0-alpha"  # WIP marker in version
authors = [
    { name = "Alan Synn", email = "alan@alansynn.com" },
]
description = "A multi-tool runner with isolated environments per tool. 🔪"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Topic :: Software Development :: Libraries :: Application Frameworks",
    "Topic :: Utilities",
    "Development Status :: 3 - Alpha",  # WIP status
]
# No runtime dependencies needed for the core runner itself yet
# Dependencies for the *tools* are handled separately
dependencies = [
    "rich>=13.0.0",  # For pretty terminal output
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.5",
    "pytest-cov>=4.0.0",
    "pytest-mock>=3.10.0",
    "ruff>=0.11.0",
    "pre-commit>=3.0.0",
]

[project.urls]
"Homepage" = "https://github.com/alansynn/jackknife"
"Bug Tracker" = "https://github.com/alansynn/jackknife/issues"

[project.scripts]
jackknife = "jackknife.cli:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_functions = "test_*"
python_classes = "Test*"
addopts = "--cov=jackknife --cov-report=term-missing --cov-report=html --cov-report=xml"

[tool.coverage.run]
source = ["jackknife"]
omit = ["tests/*", "*/test_*.py"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "pass",
    "raise ImportError",
]

[tool.setuptools]
packages = ["jackknife"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["jackknife"]

[tool.hatch.build]
only-packages = false

[tool.hatch.build.targets.wheel.sources]
"src" = "jackknife"

# Use ruff.toml for full configuration details
[tool.ruff]
target-version = "py312"
line-length = 160
lint.select = ["E", "F", "I"]

[tool.pyright]
venvPath = "."
venv = ".venv"
